--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,6 +12,27 @@
     <link rel="stylesheet" href="css/app.css">
 </head>
 <body>
-
+    <header class="header">
+        <div class="header__contenedor">
+            <div class="header__barra">
+                <a href="/">
+                    <img class="header__logo" src="./img/logo.svg" alt="logo">
+                </a>
+                <nav class="navegacion">
+                    <a class="navegacion__enlace" href="index.html">Inicio</a>
+                    <a class="navegacion__enlace" href="nosotros.html">Nosotros</a>
+                    <a class="navegacion__enlace" href="blog.html">Blog</a>
+                    <a class="navegacion__enlace" href="tienda.html">Tienda</a>
+                </nav>
+            </div>
+            <div class="modelo">
+                    <h1 class="modelo__nombre">Modelo VAI</h1>
+                    <p class="modelo__descripcion">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate aperiam officia quidem sint laudantium soluta.</p>
+                    <p class="modelo__costo">$100</p>
+                    <a class="modelo__enlace" href="producto.html">Ver Producto</a>
+            </div>
+        </div>
+        <img class="header__guitarra" src="./img/header_guitarra.png" alt="header guitarra">
+    </header>
 </body>
 </html>
