add section collection of guitarras

--- a/index.html
+++ b/index.html
@@ -34,5 +34,132 @@
         </div>
         <img class="header__guitarra" src="./img/header_guitarra.png" alt="header guitarra">
     </header>
+    <!-- para no poner dos div ponemos dos nombres (uno de ellos el de contenedor) -->
+    <main class="guitarras guitarras__contenedor">
+        <h2 class="guitarras__heading">Nuestra colección</h2>
+        <div class="guitarras__grid">
+            <!--la card de una guitarra-->
+            <div class="guitarra">
+                <img class="guitarra__imagen" src="./img/guitarra_01.jpg" alt="modelo 1">
+                <!--no reutilizamos ya que posee algunas diferencias-->
+                <div class="guitarra__contenido">
+                    <h3 class="guitarra__nombre">Lukather</h3>
+                    <p class="guitarra__descripcion">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate aperiam officia quidem sint laudantium soluta.</p>
+                    <p class="guitarra__costo">$100</p>
+                    <a class="guitarra__enlace" href="producto.html">Ver Producto</a>
+                </div>
+            </div>
+            <div class="guitarra">
+                <img class="guitarra__imagen" src="./img/guitarra_02.jpg" alt="modelo 2">
+                <!--no reutilizamos ya que posee algunas diferencias-->
+                <div class="guitarra__contenido">
+                    <h3 class="guitarra__nombre">SRV</h3>
+                    <p class="guitarra__descripcion">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate aperiam officia quidem sint laudantium soluta.</p>
+                    <p class="guitarra__costo">$100</p>
+                    <a class="guitarra__enlace" href="producto.html">Ver Producto</a>
+                </div>
+            </div>
+            <div class="guitarra">
+                <img class="guitarra__imagen" src="./img/guitarra_03.jpg" alt="modelo 3">
+                <!--no reutilizamos ya que posee algunas diferencias-->
+                <div class="guitarra__contenido">
+                    <h3 class="guitarra__nombre">Borland</h3>
+                    <p class="guitarra__descripcion">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate aperiam officia quidem sint laudantium soluta.</p>
+                    <p class="guitarra__costo">$100</p>
+                    <a class="guitarra__enlace" href="producto.html">Ver Producto</a>
+                </div>
+            </div>
+            <div class="guitarra">
+                <img class="guitarra__imagen" src="./img/guitarra_04.jpg" alt="modelo 4">
+                <!--no reutilizamos ya que posee algunas diferencias-->
+                <div class="guitarra__contenido">
+                    <h3 class="guitarra__nombre">VAI</h3>
+                    <p class="guitarra__descripcion">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate aperiam officia quidem sint laudantium soluta.</p>
+                    <p class="guitarra__costo">$100</p>
+                    <a class="guitarra__enlace" href="producto.html">Ver Producto</a>
+                </div>
+            </div>
+            <div class="guitarra">
+                <img class="guitarra__imagen" src="./img/guitarra_05.jpg" alt="modelo 5">
+                <!--no reutilizamos ya que posee algunas diferencias-->
+                <div class="guitarra__contenido">
+                    <h3 class="guitarra__nombre">Thompson</h3>
+                    <p class="guitarra__descripcion">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate aperiam officia quidem sint laudantium soluta.</p>
+                    <p class="guitarra__costo">$100</p>
+                    <a class="guitarra__enlace" href="producto.html">Ver Producto</a>
+                </div>
+            </div>
+            <div class="guitarra">
+                <img class="guitarra__imagen" src="./img/guitarra_06.jpg" alt="modelo 6">
+                <!--no reutilizamos ya que posee algunas diferencias-->
+                <div class="guitarra__contenido">
+                    <h3 class="guitarra__nombre">White</h3>
+                    <p class="guitarra__descripcion">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate aperiam officia quidem sint laudantium soluta.</p>
+                    <p class="guitarra__costo">$100</p>
+                    <a class="guitarra__enlace" href="producto.html">Ver Producto</a>
+                </div>
+            </div>
+            <div class="guitarra">
+                <img class="guitarra__imagen" src="./img/guitarra_07.jpg" alt="modelo 7">
+                <!--no reutilizamos ya que posee algunas diferencias-->
+                <div class="guitarra__contenido">
+                    <h3 class="guitarra__nombre">Cobain</h3>
+                    <p class="guitarra__descripcion">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate aperiam officia quidem sint laudantium soluta.</p>
+                    <p class="guitarra__costo">$100</p>
+                    <a class="guitarra__enlace" href="producto.html">Ver Producto</a>
+                </div>
+            </div>
+            <div class="guitarra">
+                <img class="guitarra__imagen" src="./img/guitarra_08.jpg" alt="modelo 8">
+                <!--no reutilizamos ya que posee algunas diferencias-->
+                <div class="guitarra__contenido">
+                    <h3 class="guitarra__nombre">Dale</h3>
+                    <p class="guitarra__descripcion">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate aperiam officia quidem sint laudantium soluta.</p>
+                    <p class="guitarra__costo">$100</p>
+                    <a class="guitarra__enlace" href="producto.html">Ver Producto</a>
+                </div>
+            </div>
+            <div class="guitarra">
+                <img class="guitarra__imagen" src="./img/guitarra_09.jpg" alt="modelo 9">
+                <!--no reutilizamos ya que posee algunas diferencias-->
+                <div class="guitarra__contenido">
+                    <h3 class="guitarra__nombre">Krieger</h3>
+                    <p class="guitarra__descripcion">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate aperiam officia quidem sint laudantium soluta.</p>
+                    <p class="guitarra__costo">$100</p>
+                    <a class="guitarra__enlace" href="producto.html">Ver Producto</a>
+                </div>
+            </div>
+            <div class="guitarra">
+                <img class="guitarra__imagen" src="./img/guitarra_10.jpg" alt="modelo 10">
+                <!--no reutilizamos ya que posee algunas diferencias-->
+                <div class="guitarra__contenido">
+                    <h3 class="guitarra__nombre">Campbell</h3>
+                    <p class="guitarra__descripcion">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate aperiam officia quidem sint laudantium soluta.</p>
+                    <p class="guitarra__costo">$100</p>
+                    <a class="guitarra__enlace" href="producto.html">Ver Producto</a>
+                </div>
+            </div>
+            <div class="guitarra">
+                <img class="guitarra__imagen" src="./img/guitarra_11.jpg" alt="modelo 11">
+                <!--no reutilizamos ya que posee algunas diferencias-->
+                <div class="guitarra__contenido">
+                    <h3 class="guitarra__nombre">Reed</h3>
+                    <p class="guitarra__descripcion">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate aperiam officia quidem sint laudantium soluta.</p>
+                    <p class="guitarra__costo">$100</p>
+                    <a class="guitarra__enlace" href="producto.html">Ver Producto</a>
+                </div>
+            </div>
+            <div class="guitarra">
+                <img class="guitarra__imagen" src="./img/guitarra_12.jpg" alt="modelo 12">
+                <!--no reutilizamos ya que posee algunas diferencias-->
+                <div class="guitarra__contenido">
+                    <h3 class="guitarra__nombre">Hazel</h3>
+                    <p class="guitarra__descripcion">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate aperiam officia quidem sint laudantium soluta.</p>
+                    <p class="guitarra__costo">$100</p>
+                    <a class="guitarra__enlace" href="producto.html">Ver Producto</a>
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
