add section cursos

--- a/index.html
+++ b/index.html
@@ -161,5 +161,14 @@
             </div>
         </div>
     </main>
+    <section class="cursos">
+        <div class="cursos__contenedor cursos__grid">
+            <div class="cursos__contenido">
+                <h2 class="cursos__heading">Aprende a tocar guitarra</h2>
+                <p class="cursos__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque a distinctio commodi veniam aspernatur. Deleniti modi corporis ipsa dolor ab dicta</p>
+                <a class="cursos__enlace" href="#">Más información</a>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
