add section blog

--- a/index.html
+++ b/index.html
@@ -170,5 +170,46 @@
             </div>
         </div>
     </section>
+    <section class="blog">
+        <h2 class="blog__heading">Nuestro blog</h2>
+        <div class="blog__contenedor blog__grid">
+            <article class="entrada">
+                <img class="entrada__imagen" src="./img/blog_1.jpg" alt="imagen blog">
+                <div class="entrada__contenido">
+                    <h3 class="entrada__titulo">¿Como elegir tu primera guitarra?</h3>
+                    <p class="entrada__fecha">11 de diciembre del 2024</p>
+                    <p class="entrada__descripcion">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam illo commodi iure quam   assumenda doloremque numquam?</p>
+                    <a class="entrada__enlace" href="entrada.html">Leer entrada</a>
+                </div>
+            </article>
+            <article class="entrada">
+                <img class="entrada__imagen" src="./img/blog_2.jpg" alt="imagen blog">
+                <div class="entrada__contenido">
+                    <h3 class="entrada__titulo">¿Como elegir tu primera guitarra?</h3>
+                    <p class="entrada__fecha">11 de diciembre del 2024</p>
+                    <p class="entrada__descripcion">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam illo commodi iure quam   assumenda doloremque numquam?</p>
+                    <a class="entrada__enlace" href="entrada.html">Leer entrada</a>
+                </div>
+            </article>
+            <article class="entrada">
+                <img class="entrada__imagen" src="./img/blog_3.jpg" alt="imagen blog">
+                <div class="entrada__contenido">
+                    <h3 class="entrada__titulo">¿Como elegir tu primera guitarra?</h3>
+                    <p class="entrada__fecha">11 de diciembre del 2024</p>
+                    <p class="entrada__descripcion">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam illo commodi iure quam   assumenda doloremque numquam?</p>
+                    <a class="entrada__enlace" href="entrada.html">Leer entrada</a>
+                </div>
+            </article>
+            <article class="entrada">
+                <img class="entrada__imagen" src="./img/blog_4.jpg" alt="imagen blog">
+                <div class="entrada__contenido">
+                    <h3 class="entrada__titulo">¿Como elegir tu primera guitarra?</h3>
+                    <p class="entrada__fecha">11 de diciembre del 2024</p>
+                    <p class="entrada__descripcion">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam illo commodi iure quam   assumenda doloremque numquam?</p>
+                    <a class="entrada__enlace" href="entrada.html">Leer entrada</a>
+                </div>
+            </article>
+        </div>
+    </section>
 </body>
 </html>
