--- a/index.html
+++ b/index.html
@@ -211,5 +211,16 @@
             </article>
         </div>
     </section>
+    <footer class="footer">
+        <div class="footer__contenedor footer__contenido">
+            <nav class="footer__navegacion">
+                <a class="footer__enlace" href="index.html">Inicio</a>
+                <a class="footer__enlace" href="nosotros.html">Nosotros</a>
+                <a class="footer__enlace" href="blog.html">Blog</a>
+                <a class="footer__enlace" href="tienda.html">Tienda</a>
+            </nav>
+            <h2 class="footer__derecho">Todos los derechos reservados</h2>
+        </div>
+    </footer>
 </body>
 </html>
