add borde a la imagen

--- a/nosotros.html
+++ b/nosotros.html
@@ -30,7 +30,7 @@
     <main class="nosotros nosotros__contenedor">
       <h2 class="nosotros__heading">Nosotros</h2>
       <div class="nosotros__grid">
-        <img src="./img/nosotros.jpg" alt="imagen nosotros">
+        <img class="nosotros__imagen" src="./img/nosotros.jpg" alt="imagen nosotros">
         <div class="nosotros__contenido">
           <p class="nosotros__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur aspernatur saepe sequi commodi facilis voluptatem nihil, ipsa excepturi accusantium, nemo optio minima quae aliquid quo debitis possimus maiores necessitatibus doloremque.</p>
           <p class="nosotros_texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident sunt beatae sed a earum magni minima, alias architecto cumque dolorem, autem, accusamus eius quos perspiciatis culpa rerum voluptatum? Labore, at!</p>
