--- a/producto.html
+++ b/producto.html
@@ -25,6 +25,29 @@
                     <a class="navegacion__enlace" href="tienda.html">Tienda</a>
                 </nav>
             </div>
+            <div class="carrito">
+                <img src="./img/cart.svg" alt="">
+                <div id="carrito">
+                    <table>
+                        <thead>
+                            <tr>
+                                <th>Imagen</th>
+                                <th>Nombre</th>
+                                <th>Precio</th>
+                                <th>Cantidad</th>
+                                <th></th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <td><img src="/img/guitarra_01.jpg" alt=""></td>
+                            <td>VAI</td>
+                            <td>$100</td>
+                            <td>1</td>
+                        </tbody>
+                    </table>
+                    <button class="carrito__vaciarCarrito">Vaciar Carrito</button>
+                </div>
+            </div>
         </div>
     </header>
     <main class="contenedor">
@@ -70,5 +93,6 @@
             <h2 class="footer__derecho">Todos los derechos reservados</h2>
         </div>
     </footer>
+    <script type="module" src="js/app.js"></script>
 </body>
 </html>
