--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="header__contenedor">
             <div class="header__barra">
                 <a href="/">
-                    <img class="header__logo" src="./img/logo.svg" alt="logo">
+                    <img class="header__logo" src="./img/music.jpg" alt="logo">
                 </a>
                 <nav class="navegacion">
                     <a class="navegacion__enlace" href="index.html">Inicio</a>
@@ -27,7 +27,7 @@
             </div>
             <div class="modelo">
                     <h1 class="modelo__nombre">Modelo VAI</h1>
-                    <p class="modelo__descripcion">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate aperiam officia quidem sint laudantium soluta.</p>
+                    <p class="modelo__descripcion">Una guitarra icónica diseñada en colaboración con Steve Vai. Con su exclusivo Monkey Grip, configuración de pastillas DiMarzio Evolution (HSH), mástil ultradelgado Wizard y puente flotante Edge Tremolo, es ideal para shred, rock y metal. Perfecta combinación de diseño llamativo y rendimiento profesional. ¡Lista para inspirar! </p>
                     <p class="modelo__costo">$100</p>
                     <a class="modelo__enlace" href="producto.html">Ver Producto</a>
             </div>
