--- a/tienda.html
+++ b/tienda.html
@@ -16,7 +16,7 @@
         <div class="header__contenedor">
             <div class="header__barra">
                 <a href="/">
-                    <img class="header__logo" src="./img/logo.svg" alt="logo">
+                    <img class="header__logo" src="./img/music.jpg" alt="logo">
                 </a>
                 <nav class="navegacion">
                     <a class="navegacion__enlace" href="index.html">Inicio</a>
@@ -161,7 +161,7 @@
                 <a class="footer__enlace" href="blog.html">Blog</a>
                 <a class="footer__enlace" href="tienda.html">Tienda</a>
             </nav>
-            <h2 class="footer__derecho">Todos los derechos reservados</h2>
+            <h2 class="footer__derecho">Elige tu producto favorito</h2>
         </div>
     </footer>
 </body>
