--- a/nosotros.html
+++ b/nosotros.html
@@ -16,7 +16,7 @@
         <div class="header__contenedor">
             <div class="header__barra">
                 <a href="/">
-                    <img class="header__logo" src="./img/logo.svg" alt="logo">
+                    <img class="header__logo" src="./img/music.jpg" alt="logo">
                 </a>
                 <nav class="navegacion">
                     <a class="navegacion__enlace" href="index.html">Inicio</a>
