--- a/blog.html
+++ b/blog.html
@@ -53,16 +53,16 @@
             <div class="entrada__contenido">
                 <h3 class="entrada__titulo">¿Como elegir tu primera guitarra?</h3>
                 <p class="entrada__fecha">11 de diciembre del 2024</p>
-                <p class="entrada__descripcion">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam illo commodi iure quam   assumenda doloremque numquam?</p>
+                <p class="entrada__descripcion">Te daremos consejos clave para elegir tu primera guitarra y encontrar la que se adapte a tu estilo, comodidad y presupuesto</p>
                 <a class="entrada__enlace" href="entrada.html">Leer entrada</a>
             </div>
         </article>
         <article class="entrada">
             <img class="entrada__imagen" src="./img/blog_4.jpg" alt="imagen blog">
             <div class="entrada__contenido">
-                <h3 class="entrada__titulo">¿Como elegir tu primera guitarra?</h3>
+                <h3 class="entrada__titulo">¿Acústica o eléctrica?</h3>
                 <p class="entrada__fecha">11 de diciembre del 2024</p>
-                <p class="entrada__descripcion">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam illo commodi iure quam   assumenda doloremque numquam?</p>
+                <p class="entrada__descripcion">Los mejores consejos para elegir entre una guitarra acústica o eléctrica, según tu estilo, nivel y objetivos.</p>
                 <a class="entrada__enlace" href="entrada.html">Leer entrada</a>
             </div>
         </article>
