--- a/index.html
+++ b/index.html
@@ -34,31 +34,40 @@
         </div>
         <img class="header__guitarra" src="./img/header_guitarra.png" alt="header guitarra">
     </header>
-    <!-- para no poner dos div ponemos dos nombres (uno de ellos el de contenedor) -->
-    <main class="guitarras guitarras__contenedor">
-        <h2 class="guitarras__heading">Nuestra colección</h2>
-        <div class="guitarras__grid">
-            <!--la card de una guitarra-->
-            <div class="guitarra">
-                <img class="guitarra__imagen" src="./img/guitarra_01.jpg" alt="modelo 1">
-                <!--no reutilizamos ya que posee algunas diferencias-->
-                <div class="guitarra__contenido">
-                    <h3 class="guitarra__nombre">Lukather</h3>
-                    <p class="guitarra__descripcion">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate aperiam officia quidem sint laudantium soluta.</p>
-                    <p class="guitarra__costo">$100</p>
-                    <a class="guitarra__enlace" href="producto.html">Ver Producto</a>
+    <main>
+        <h2 class="productos__heading">Nuestros productos</h2>
+        <div class="baterias baterias__contenedor">
+            <h3 class="baterias__title">Baterías</h3>
+            <div class="baterias__grid">
+                <div class="bateria">
+                    <img src="img/bateria_01.jpg" alt="modelo 1">
+                    <div class="bateria__contenido">
+                        <h3 class="bateria__nombre">Tama</h3>
+                        <p class="bateria__costo">$100</p>
+                        <a class="bateria__enlace" href="producto.html">Ver Producto</a>
+                    </div>
+                </div>
+                <div class="bateria">
+                    <img src="img/bateria_02.jpg" alt="modelo 1">
+                     <div class="bateria__contenido">
+                        <h3 class="bateria__nombre">Sonor</h3>
+                        <p class="bateria__costo">$100<p>                         
+                        <a class="bateria__enlace" href="producto.html">Ver Producto</a>
+                    </div>
+                </div>
+                <div class="bateria">
+                    <img src="img/bateria_03.jpg" alt="modelo 1">
+                     <div class="bateria__contenido">
+                        <h3 class="bateria__nombre">Yamaha</h3>
+                        <p class="bateria__costo">$100<p>                         
+                        <a class="bateria__enlace" href="producto.html">Ver Producto</a>
+                    </div>
                 </div>
             </div>
-            <div class="guitarra">
-                <img class="guitarra__imagen" src="./img/guitarra_02.jpg" alt="modelo 2">
-                <!--no reutilizamos ya que posee algunas diferencias-->
-                <div class="guitarra__contenido">
-                    <h3 class="guitarra__nombre">SRV</h3>
-                    <p class="guitarra__descripcion">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate aperiam officia quidem sint laudantium soluta.</p>
-                    <p class="guitarra__costo">$100</p>
-                    <a class="guitarra__enlace" href="producto.html">Ver Producto</a>
-                </div>
-            </div>
+        </div>  
+        <div class="guitarras guitarras__contenedor">
+            <h3 class="guitarras__title">Guitarras</h3>
+            <div class="guitarras__grid">
             <div class="guitarra">
                 <img class="guitarra__imagen" src="./img/guitarra_03.jpg" alt="modelo 3">
                 <!--no reutilizamos ya que posee algunas diferencias-->
@@ -90,40 +99,10 @@
                 </div>
             </div>
             <div class="guitarra">
-                <img class="guitarra__imagen" src="./img/guitarra_06.jpg" alt="modelo 6">
-                <!--no reutilizamos ya que posee algunas diferencias-->
-                <div class="guitarra__contenido">
-                    <h3 class="guitarra__nombre">White</h3>
-                    <p class="guitarra__descripcion">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate aperiam officia quidem sint laudantium soluta.</p>
-                    <p class="guitarra__costo">$100</p>
-                    <a class="guitarra__enlace" href="producto.html">Ver Producto</a>
-                </div>
-            </div>
-            <div class="guitarra">
-                <img class="guitarra__imagen" src="./img/guitarra_07.jpg" alt="modelo 7">
-                <!--no reutilizamos ya que posee algunas diferencias-->
-                <div class="guitarra__contenido">
-                    <h3 class="guitarra__nombre">Cobain</h3>
-                    <p class="guitarra__descripcion">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate aperiam officia quidem sint laudantium soluta.</p>
-                    <p class="guitarra__costo">$100</p>
-                    <a class="guitarra__enlace" href="producto.html">Ver Producto</a>
-                </div>
-            </div>
-            <div class="guitarra">
                 <img class="guitarra__imagen" src="./img/guitarra_08.jpg" alt="modelo 8">
                 <!--no reutilizamos ya que posee algunas diferencias-->
                 <div class="guitarra__contenido">
                     <h3 class="guitarra__nombre">Dale</h3>
-                    <p class="guitarra__descripcion">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate aperiam officia quidem sint laudantium soluta.</p>
-                    <p class="guitarra__costo">$100</p>
-                    <a class="guitarra__enlace" href="producto.html">Ver Producto</a>
-                </div>
-            </div>
-            <div class="guitarra">
-                <img class="guitarra__imagen" src="./img/guitarra_09.jpg" alt="modelo 9">
-                <!--no reutilizamos ya que posee algunas diferencias-->
-                <div class="guitarra__contenido">
-                    <h3 class="guitarra__nombre">Krieger</h3>
                     <p class="guitarra__descripcion">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate aperiam officia quidem sint laudantium soluta.</p>
                     <p class="guitarra__costo">$100</p>
                     <a class="guitarra__enlace" href="producto.html">Ver Producto</a>
@@ -149,14 +128,36 @@
                     <a class="guitarra__enlace" href="producto.html">Ver Producto</a>
                 </div>
             </div>
-            <div class="guitarra">
-                <img class="guitarra__imagen" src="./img/guitarra_12.jpg" alt="modelo 12">
-                <!--no reutilizamos ya que posee algunas diferencias-->
-                <div class="guitarra__contenido">
-                    <h3 class="guitarra__nombre">Hazel</h3>
-                    <p class="guitarra__descripcion">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate aperiam officia quidem sint laudantium soluta.</p>
-                    <p class="guitarra__costo">$100</p>
-                    <a class="guitarra__enlace" href="producto.html">Ver Producto</a>
+        </div>
+        <div class="otros otros__contenedor">
+            <h3 class="otros__title">Otros</h3>
+            <div class="otros__grid">
+                <div class="bajo">
+                    <img src="img/bajo-fender.jpg" alt="imagen bajo">
+                    <div class="bajo__contenido">
+                        <h3 class="bajo__nombre">Fender American Pro</h3>
+                        <h4>Bajo</h4>
+                        <p class="bajo__costo">$100</p>
+                        <a class="bajo__enlace" href="producto.html">Ver producto</a>
+                    </div>
+                </div>
+                <div class="piano">
+                    <img class="piano__imagen" src="img/piano.jfif" alt="piano imagen">
+                    <div class="piano__contenido">
+                        <h3 class="piano__nombre">Grotian</h3>
+                        <h4 class="piano__subtitulo">Piano</h4>
+                        <p class="piano__costo">$100</p>
+                        <a class="piano__enlace" href="producto.html">Ver producto</a>
+                    </div>
+                </div>
+                <div class="saxofon">
+                    <img src="img/saxofon.jpg" alt="saxofon imagen">
+                    <div class="saxofon__contenido">
+                        <h3 class="saxofon__nombre">Yamaha YTS-62</h3>
+                        <h4>Saxofon</h4>
+                        <p class="saxofon__costo">$100</p>
+                        <a class="saxofon__enlace" href="producto.html">Ver producto</a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -165,7 +166,7 @@
         <div class="cursos__contenedor cursos__grid">
             <div class="cursos__contenido">
                 <h2 class="cursos__heading">Aprende a tocar guitarra</h2>
-                <p class="cursos__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque a distinctio commodi veniam aspernatur. Deleniti modi corporis ipsa dolor ab dicta</p>
+                <p class="cursos__descripcion">Con nuestro curso que te guía paso a paso desde lo básico, como acordes y ritmos, hasta técnicas avanzadas, adaptándose a tu nivel. Es ideal para progresar rápido con estructura y apoyo.</p>
                 <a class="cursos__enlace" href="#">Más información</a>
             </div>
         </div>
@@ -196,16 +197,16 @@
                 <div class="entrada__contenido">
                     <h3 class="entrada__titulo">¿Como elegir tu primera guitarra?</h3>
                     <p class="entrada__fecha">11 de diciembre del 2024</p>
-                    <p class="entrada__descripcion">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam illo commodi iure quam   assumenda doloremque numquam?</p>
+                    <p class="entrada__descripcion">Te daremos consejos clave para elegir tu primera guitarra y encontrar la que se adapte a tu estilo, comodidad y presupuesto</p>
                     <a class="entrada__enlace" href="entrada.html">Leer entrada</a>
                 </div>
             </article>
             <article class="entrada">
                 <img class="entrada__imagen" src="./img/blog_4.jpg" alt="imagen blog">
                 <div class="entrada__contenido">
-                    <h3 class="entrada__titulo">¿Como elegir tu primera guitarra?</h3>
+                    <h3 class="entrada__titulo">¿Acústica o eléctrica?</h3>
                     <p class="entrada__fecha">11 de diciembre del 2024</p>
-                    <p class="entrada__descripcion">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam illo commodi iure quam   assumenda doloremque numquam?</p>
+                    <p class="entrada__descripcion">Los mejores consejos para elegir entre una guitarra acústica o eléctrica, según tu estilo, nivel y objetivos.</p>
                     <a class="entrada__enlace" href="entrada.html">Leer entrada</a>
                 </div>
             </article>
