--- a/nosotros.html
+++ b/nosotros.html
@@ -32,8 +32,7 @@
       <div class="nosotros__grid">
         <img class="nosotros__imagen" src="./img/nosotros.jpg" alt="imagen nosotros">
         <div class="nosotros__contenido">
-          <p class="nosotros__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur aspernatur saepe sequi commodi facilis voluptatem nihil, ipsa excepturi accusantium, nemo optio minima quae aliquid quo debitis possimus maiores necessitatibus doloremque.</p>
-          <p class="nosotros_texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident sunt beatae sed a earum magni minima, alias architecto cumque dolorem, autem, accusamus eius quos perspiciatis culpa rerum voluptatum? Labore, at!</p>
+          <p class="nosotros__texto">"En Music Club, compartimos nuestra pasión por la música ofreciendo una amplia selección de guitarras, bajos y pianos de alta calidad, junto con cursos diseñados para ayudarte a dominar tu instrumento favorito. Nuestro objetivo es acompañarte en cada acorde, nota y melodía, impulsando tu talento musical desde el primer paso. 🎶".</p>
         </div>
       </div>
     </main>
